--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    compile 'com.android.support.cardview-v7:25.0.1'
     defaultConfig {
         applicationId "com.innovation.plugs"
         minSdkVersion 27
